// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat jTrwbo k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa gvIinf k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jTrwbo k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa gvIinf k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--disabled"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--disabled"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jTrwbo k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa gvIinf k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--error"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--error"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jTrwbo k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa gvIinf k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="k-Form-TextInputWithUnit__unit"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jTrwbo k-Form-TextInputWithUnit"
>
  <input
    className="sc-bdVaJa gvIinf k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--valid"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--valid"
  >
    λ
  </span>
</div>
`;
